Reverted descriptor set to entry (again!)